--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,15 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.ui</groupId>
+			<artifactId>swing</artifactId>
+			<version>1</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/resources/AbsoluteLayout-RELEASE111.jar</systemPath>
+		</dependency>
+
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
